Use pre-java 21 syntax